docs/user-guide/minatest/minapod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: minapod
  labels:
    app: minapod
spec:
  containers:
    - name: minapod
      image: gcr.io/google_containers/test-webserver
      imagePullPolicy: IfNotPresent
      volumeMounts:
        - mountPath: /tmp
          name: cache-volume
  volumes:
    - name: cache-volume
      emptyDir:
        {}


  restartPolicy: Always
