docs/user-guide/minatest/minaservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: minaservice
  namespace: default
spec:
  selector:
    app: nginx-deployment-mina
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9376
    - name: https
      protocol: TCP
      port: 443
      targetPort: 9377
